fix(utility_app): start api with docker, fixed swagger
